--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 # Compiled class file
 *.class
 
+# Log file
+*.log
+
 # BlueJ files
 *.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-
 # Package Files #
+*.jar
 *.war
 *.nar
 *.ear
@@ -34,3 +37,4 @@ target/
 .vscode
 /gradlew
 /gradlew.bat
+*.properties
