--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,31 @@
 plugins {
-    id 'java'
-    id "io.qameta.allure" version "2.9.6"
-    id "io.freefair.lombok" version "6.0.0-m2"
+    id 'java-library'
+    id 'io.qameta.allure' version '2.9.6'
+    id "io.freefair.lombok" version "6.4.3"
 }
 
 repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+def restAssuredVersion = "5.0.1",
+    allureVersion = "2.17.3"
 
-def restAssured = '4.5.1',
-    selenideVersion = '6.3.2',
-    junitVersion = "5.8.2",
-    slf4jVersion = '1.7.36',
-    allureVersion = '2.17.3'
+dependencies {
+    testImplementation(
+            "io.rest-assured:rest-assured:$restAssuredVersion",
+            "io.qameta.allure:allure-rest-assured:$allureVersion",
+            "io.rest-assured:json-schema-validator:$restAssuredVersion",
+            "org.junit.jupiter:junit-jupiter:5.8.2",
+            "org.slf4j:slf4j-simple:1.7.36",
+            "org.assertj:assertj-core:3.22.0")
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 allure {
     adapter {
@@ -25,41 +35,30 @@ allure {
                 adapterVersion.set(allureVersion)
             }
         }
+
     }
     report {
         version.set(allureVersion)
     }
 }
 
-dependencies {
-    testImplementation(
-            "io.rest-assured:rest-assured:$restAssured",
-            "io.rest-assured:json-schema-validator:$restAssured",
-            "io.qameta.allure:allure-rest-assured:$allureVersion",
-            "org.assertj:assertj-core:3.22.0",
-            'com.fasterxml.jackson.core:jackson-databind:2.13.2.2',
-            "org.aeonbits.owner:owner:1.0.12",
-            "org.junit.jupiter:junit-jupiter-api:$junitVersion",
-            "org.junit.jupiter:junit-jupiter-engine:$junitVersion",
-            "org.junit.jupiter:junit-jupiter-params:$junitVersion",
-            "com.codeborne:selenide:$selenideVersion",
-            "io.qameta.allure:allure-selenide:$allureVersion")
-    testRuntimeOnly(
-            "org.slf4j:slf4j-simple:$slf4jVersion",
-            "org.junit.jupiter:junit-jupiter-engine:$junitVersion")
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
 
 tasks.withType(Test) {
     systemProperties(System.getProperties())
     useJUnitPlatform()
 
+    if (System.getProperty("threads") != null) {
+        systemProperties += [
+                'junit.jupiter.execution.parallel.enabled'                 : true,
+                'junit.jupiter.execution.parallel.mode.default'            : 'concurrent',
+                'junit.jupiter.execution.parallel.mode.classes.default'    : 'concurrent',
+                'junit.jupiter.execution.parallel.config.strategy'         : 'fixed',
+                'junit.jupiter.execution.parallel.config.fixed.parallelism': System.getProperty("threads").toInteger()
+        ]
+    }
+
     testLogging {
         lifecycle {
-//            events "started", "failed"
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
